--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background: linear-gradient(0deg, rgba(240, 238, 233, 1) 0%, rgba(161, 130, 98, 1) 68%) no-repeat;
     font-family: "Playfair Display", serif;
     background-size: cover;
-    
+    background-attachment: fixed;
 
 }
 
@@ -23,6 +23,9 @@ body {
 }
 ul{
     list-style-type: none;
+    padding: 0;
+    margin: 0 auto;
+    text-align: center;
 }
 h3{
     color: antiquewhite;
