--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     width: 300px;
    
     font-family: "Playfair Display", serif;
-    ;
+    text-align: center;
 }
 ul{
     list-style-type: none;
