--- a/style.css
+++ b/style.css
@@ -3,43 +3,135 @@
 img {
     width: 280px;
     border-radius: 100px;
+     filter: brightness(70%) contrast(130%);
 }
+p {
+   font-size: 0.95rem;
+  line-height: 1.5;
+  color: #d0d0d0;}
 
 body {
     text-align: center;
     background: #f0eee9;
-    background: linear-gradient(0deg, rgba(240, 238, 233, 1) 0%, rgba(161, 130, 98, 1) 68%) no-repeat;
-    font-family: "Playfair Display", serif;
+  background-color: #34210e;
     background-size: cover;
     background-attachment: fixed;
     margin: auto 200px;
+    display: flex;
 
 }
 
 .avatar {
     width: 300px;
-   
     font-family: "Playfair Display", serif;
     text-align: center;
+    justify-items: center;
 }
 ul{
     list-style-type: none;
     padding: 0;
     margin: 0 auto;
     text-align: center;
+      color: #d0d0d0;
 }
 h3{
-    color: antiquewhite;
+    
+  color: #d0d0d0;
 }
 .moca{
     color: #f0eee9;
 }
 h1{
-color: #f0eee9;
+
+  color: #d0d0d0;
 }
 h2{
-    color: #f0eee9;
+ 
+  color: #d0d0d0;
 }
 .macchiato{
 color: #f0eee9;
+}
+.card{
+    background-color: #1e1e1e;
+  border: 1px solid #333;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  padding: 16px;
+  align-items: center;
+}
+.imgtop{
+     width: 300px;
+  height: 100%;
+  object-fit: cover;
+}
+.escrit {
+     padding: 20px;
+  flex: 1;
+}
+.escrit h2 {
+     margin-top: 0;
+  color: #ffcc66;
+}
+footer {
+  background-color: #222;
+  text-align: center;
+  padding: 10px;
+  color: #aaa;
+  margin-top: 20px;
+}
+.escrit p {
+   font-size: 0.95rem;
+  line-height: 1.5;
+  color: #d0d0d0;
+}
+.tudo {
+  padding: 20px;
+  max-width: 1000px;
+  margin: auto;
+}
+.card,
+.card-re {
+  display: flex;
+  background-color: #1e1e1e;
+  border-radius: 8px;
+  margin: 20px 0;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
+.card-re{
+      flex-direction: row-reverse;
+}
+@media (max-width: 600px) {
+  .card, .card-re {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .imgtop img {
+    width: 100%;
+    height: auto;
+  }
+
+  .escrit {
+    text-align: center;
+  }
+
+  .conteudo-topo h1,
+  .conteudo-principal h2 {
+    color: #ffc107;
+  }
+}
+button{
+    color: #222;
+    text-align: center;
+    border-radius: 500px;
+    background-color: #ffc107
+}
+.sobre img{
+    width: 40px;
 }
