--- a/style.css
+++ b/style.css
@@ -36,18 +36,18 @@ ul{
 }
 h3{
     
-  color: #d0d0d0;
+  color: #ffc107;
 }
 .moca{
     color: #f0eee9;
 }
 h1{
 
-  color: #d0d0d0;
+  color: #ffc107;
 }
 h2{
  
-  color: #d0d0d0;
+  color: #ffc107;
 }
 .macchiato{
 color: #f0eee9;
